--- a/css/main.css
+++ b/css/main.css
@@ -37,29 +37,6 @@ button:hover {
   line-height: 1.17;
 }
 
-.main-conteiner {
-  width: 1600px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-@media screen and (min-width: 480px) {
-  .main-conteiner {
-    width: 480px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .main-conteiner {
-    width: 768px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .main-conteiner {
-    width: 1600px;
-  }
-}
-
 .conteiner {
   width: 1200px;
   margin: 0 auto;
@@ -90,10 +67,12 @@ main {
 .header {
   height: 60px;
   padding-top: 16px;
-  min-width: 100vw;
+  border-bottom: 1px #ECECEC solid;
+  width: 100vw;
 }
 
 .header-div {
+  width: 100vw;
   display: flex;
   align-items: center;
 }
@@ -108,63 +87,10 @@ main {
   font-size: 24px;
   letter-spacing: 0.03em;
   color: #2196F3;
-  margin-right: 284px;
 }
 
 .logo {
   color: #212121;
-}
-
-.link-list-item {
-  font-weight: 500;
-  font-size: 14px;
-  letter-spacing: 0.02em;
-  transition-property: color, fill;
-  transition-duration: 500ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-delay: 100ms;
-}
-.link-list-item:hover {
-  color: #2196F3;
-}
-
-.link-list-item-header {
-  font-weight: 500;
-  font-size: 14px;
-  letter-spacing: 0.02em;
-  color: #212121;
-  transition-property: color;
-  transition-duration: 500ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-delay: 100ms;
-  position: relative;
-  padding-bottom: 33px;
-}
-.link-list-item-header.active {
-  color: #2196F3;
-}
-.link-list-item-header:hover {
-  color: #2196F3;
-}
-.link-list-item-header::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 4px;
-  background-color: #2196F3;
-  border-radius: 2px;
-  transform: scaleX(0);
-  transition-property: transform;
-  transition-duration: 500ms;
-  transition-timing-function: ease;
-}
-.link-list-item-header.active::after {
-  transform: scaleX(1);
-}
-.link-list-item-header:hover::after {
-  transform: scaleX(1);
 }
 
 .form-header > label {
@@ -233,7 +159,7 @@ main {
   transform: translateX(0);
 }
 
-.menu-container .menu-toggle {
+.menu-toggle {
   position: absolute;
   top: 20px;
   right: 25px;
@@ -263,11 +189,64 @@ main {
   color: #2196F3;
 }
 
-.link-list-item {
+@keyframes sizing {
+  0% {
+    font-weight: 500;
+    font-size: 24px;
+    letter-spacing: 0.02em;
+    color: #757575;
+  }
+}
+.list-header-menu {
+  margin-bottom: 64px;
+}
+
+.list-header__item-menu:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.link-list-item-menu {
+  font-weight: 500;
+  font-size: 24px;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+.link-list-item-menu:hover {
+  animation-name: sizing;
+  animation-duration: 300ms;
+  animation-iteration-count: 1;
+  animation-direction: alternate;
+  animation-timing-function: linear;
   font-weight: 500;
   font-size: 34px;
   letter-spacing: 0.02em;
-  color: #757575;
+  color: #2196F3;
+}
+
+.social-menu {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+@media (min-width: 320px) {
+  .social-menu {
+    flex-wrap: wrap;
+  }
+}
+
+.social-menu__item {
+  padding-right: 10px;
+}
+.social-menu__item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.social-link-menu {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 122%;
+  letter-spacing: 0.02em;
+  color: #2196F3;
 }
 
 @media screen and (min-width: 768px) {
@@ -279,13 +258,9 @@ main {
     display: none;
   }
   .header-div {
-    width: 768px;
     display: flex;
-    flex-direction: row;
     align-items: center;
-  }
-  .form-header {
-    display: none;
+    justify-content: center;
   }
   .list-header {
     display: block;
@@ -296,6 +271,44 @@ main {
     gap: 50px;
     padding-right: 96px;
   }
+  .link-list-item-header {
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 0.02em;
+    color: #212121;
+    transition-property: color;
+    transition-duration: 500ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-delay: 100ms;
+    position: relative;
+    padding-bottom: 32px;
+  }
+  .link-list-item-header.active {
+    color: #2196F3;
+  }
+  .link-list-item-header:hover {
+    color: #2196F3;
+  }
+  .link-list-item-header::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 4px;
+    background-color: #2196F3;
+    border-radius: 2px;
+    transform: scaleX(0);
+    transition-property: transform;
+    transition-duration: 500ms;
+    transition-timing-function: ease;
+  }
+  .link-list-item-header.active::after {
+    transform: scaleX(1);
+  }
+  .link-list-item-header:hover::after {
+    transform: scaleX(1);
+  }
   .link-header {
     margin-right: 88px;
   }
@@ -303,6 +316,9 @@ main {
     display: flex;
     flex-direction: column;
     gap: 10px;
+  }
+  .list-header__item {
+    text-wrap: nowrap;
   }
   .link-list-item {
     font-weight: 500;
@@ -323,6 +339,7 @@ main {
   }
   .header-div {
     width: 1200px;
+    justify-content: start;
   }
   .link-header {
     margin-right: 94px;
@@ -337,27 +354,44 @@ main {
     flex-direction: row;
     gap: 30px;
   }
+  .link-list-item-header {
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 0.02em;
+    color: #212121;
+    transition-property: color;
+    transition-duration: 500ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-delay: 100ms;
+    position: relative;
+    padding-bottom: 33px;
+  }
 }
 .hero {
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-color: #2F303A;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-m.png);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-m-1x.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding-top: 118px;
-  padding-bottom: 118px;
-  width: 100vw;
+}
+@media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-m-2x.png);
+  }
 }
 
 .hero-div {
   display: flex;
   align-items: center;
   flex-direction: column;
+  width: 100vw;
 }
 
 .title-hero {
   color: #FFFFFF;
-  width: 360px;
+  width: 100%;
   font-weight: 900;
   font-size: 26px;
   line-height: 162%;
@@ -546,12 +580,19 @@ main {
 
 @media screen and (min-width: 768px) {
   .hero {
+    width: 100vw;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-t-1x.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    width: 100vw;
   }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-t-2x.png);
+  }
+}
+@media screen and (min-width: 768px) {
   .title-hero {
     font-weight: 900;
     font-size: 26px;
@@ -564,14 +605,21 @@ main {
 }
 @media screen and (min-width: 1200px) {
   .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    width: 100vw;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-d-1x.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    width: 100vw;
   }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-d-2x.png);
+  }
+}
+@media screen and (min-width: 1200px) {
   .title-hero {
     font-weight: 900;
     font-size: 44px;
@@ -584,7 +632,12 @@ main {
 .section-peculiarities {
   padding-top: 60px;
   padding-bottom: 60px;
-  min-width: 100vw;
+}
+.section-peculiarities .peculiarities-div {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .section-peculiarities .title-peculiarities {
   color: #212121;
@@ -594,7 +647,8 @@ main {
   display: none;
 }
 .section-peculiarities .list-peculiarities .list-peculiarities__item {
-  width: 450px;
+  width: 100%;
+  max-width: 450px;
 }
 .section-peculiarities .list-peculiarities .list-peculiarities__item:not(:last-child) {
   margin-bottom: 30px;
@@ -736,12 +790,13 @@ main {
   background-color: #f5f4fa;
   padding-top: 60px;
   padding-bottom: 60px;
-  min-width: 100vw;
+  width: 100vw;
 }
 .section-team .team-div {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100vw;
 }
 .section-team .title-team {
   color: #212121;
@@ -752,7 +807,7 @@ main {
   margin-bottom: 30px;
 }
 .section-team .list-team .list-team__item {
-  width: 450px;
+  width: 100%;
   padding-bottom: 30px;
   border-radius: 0 0 4px 4px;
   background-color: #FFFFFF;
@@ -878,7 +933,12 @@ main {
 }
 .section-clients {
   padding: 60px 0;
-  min-width: 100vw;
+}
+.section-clients .clients-div {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .section-clients .title-clients {
   font-weight: 700;
@@ -892,6 +952,7 @@ main {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   justify-content: center;
+  max-width: 450px;
   gap: 30px;
   list-style: none;
   padding: 0;
@@ -901,14 +962,15 @@ main {
   border-color: #2196F3;
   fill: #2196F3;
 }
-.section-clients .link-clients {
+.section-clients .list-clients__item .link-clients {
   display: flex;
   align-items: center;
   justify-content: center;
   fill: #AFB1B8;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
-  width: 210px;
+  width: 44vw;
+  max-width: 210px;
   height: 92px;
   transition: border 500ms cubic-bezier(0.4, 0, 0.2, 1) 100ms, fill 500ms cubic-bezier(0.4, 0, 0.2, 1) 100ms;
 }
@@ -919,7 +981,7 @@ main {
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
   }
-  .section-clients .link-clients {
+  .section-clients .list-clients__item .link-clients {
     width: 210px;
     height: 92px;
   }
@@ -943,7 +1005,7 @@ main {
     display: flex;
     align-items: center;
   }
-  .section-clients .link-clients {
+  .section-clients .list-clients__item .link-clients {
     width: 170px;
     height: 92px;
   }
@@ -951,7 +1013,13 @@ main {
 .footer {
   background-color: #2F303A;
   padding: 60px 0;
-  min-width: 100vw;
+  width: 100vw;
+}
+.footer .footer-div {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .footer .footer__adress {
   font-style: normal;
@@ -1064,7 +1132,8 @@ main {
 .footer .div-send .form-footer .input-send {
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
-  width: 450px;
+  width: 100%;
+  max-width: 450px;
   height: 50px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: rgba(33, 150, 243, 0);
@@ -1111,39 +1180,262 @@ main {
   .footer-div .tablet-footer .footer-social {
     padding-top: 5px;
   }
+  .footer-div .div-send .form-footer .input-send {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
-  .footer-div {
-    display: flex;
+  .footer .footer-div {
     flex-direction: row;
     align-items: normal;
     width: 1200px;
   }
-  .footer-div .footer-social {
+  .footer .footer-div .footer-social {
     align-items: normal;
   }
-  .footer-div .tablet-footer {
+  .footer .footer-div .tablet-footer {
     gap: 70px;
   }
-  .footer-div .link-footer {
+  .footer .footer-div .link-footer {
     text-align: left;
   }
-  .footer-div .list-footer {
+  .footer .footer-div .list-footer {
     align-items: start;
   }
-  .footer-div .div-send {
+  .footer .footer-div .div-send {
     padding-top: 5px;
   }
-  .footer-div .div-send .title-footer-send {
+  .footer .footer-div .div-send .title-footer-send {
     text-align: left;
   }
-  .footer-div .div-send .form .form-footer {
+  .footer .footer-div .div-send .form .form-footer {
     display: flex;
     flex-direction: row;
   }
-  .footer-div .div-send .form .form-footer .input-send {
+  .footer .footer-div .div-send .form .form-footer .input-send {
     width: 358px;
     margin-bottom: 0;
     margin-right: 12px;
+  }
+}
+.portfolio-section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.portfolio-section .filter-title {
+  display: none;
+}
+.portfolio-section .filter-list {
+  display: flex;
+  gap: 8px;
+  width: 339px;
+  flex-wrap: wrap;
+}
+.portfolio-section .filter-list .filter-list__item {
+  display: block;
+}
+.portfolio-section .filter-list .list-item-button {
+  padding: 6px 25px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 162%;
+  letter-spacing: 0.03em;
+  text-align: center;
+  border-radius: 4px;
+  text-wrap: nowrap;
+}
+.portfolio-section .filter-list .list-item-button.active-but {
+  background-color: #2196F3;
+  color: #FFFFFF;
+}
+.portfolio-section .project-list {
+  padding-top: 40px;
+}
+.portfolio-section .project-list .project-list__item {
+  background-color: #FFFFFF;
+  background-color: #FFFFFF;
+  width: 450px;
+  cursor: pointer;
+  transition-property: box-shadow;
+  transition-duration: 500ms;
+  transition-timing-function: ease;
+}
+.portfolio-section .project-list .project-list__item:hover {
+  box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06), 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+}
+.portfolio-section .project-list .project-list__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+.portfolio-section .project-list .box {
+  position: relative;
+  width: 450px;
+  height: 404px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+.portfolio-section .project-list .box .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translatey(100%);
+  transition-property: transform;
+  transition-duration: 500ms;
+  transition-timing-function: ease-in-out;
+}
+.portfolio-section .project-list .box .overlay .taxt {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 156%;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+  padding: 77px 24px;
+}
+.portfolio-section .project-list .box:hover .overlay {
+  transform: translatey(0);
+}
+.portfolio-section .project-list .box .image {
+  width: 100%;
+  height: auto;
+}
+.portfolio-section .project-list .box .div-text {
+  width: 100%;
+  height: 110px;
+  padding: 20px 23px 12px 23px;
+  border: solid #EEEEEE;
+  border-width: 0 1px 1px 1px;
+  background-color: #FFFFFF;
+  background-color: #FFFFFF;
+  position: relative;
+}
+.portfolio-section .project-list .box .div-text .project-item-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 200%;
+  letter-spacing: 0.06em;
+  color: #212121;
+  justify-content: left;
+  margin-bottom: 4px;
+  text-wrap: nowrap;
+}
+.portfolio-section .project-list .box .div-text .description-p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 187%;
+  letter-spacing: 0.03em;
+  color: #757575;
+  justify-content: left;
+  display: flex;
+  justify-content: left;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .portfolio-section .portfolio-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .portfolio-section .portfolio-div .filter-list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    width: 100%;
+    gap: 8px;
+  }
+  .portfolio-section .portfolio-div .filter-list .filter-list__item {
+    display: block;
+  }
+  .portfolio-section .portfolio-div .filter-list .list-item-button {
+    padding: 6px 25px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 162%;
+    letter-spacing: 0.03em;
+    text-align: center;
+    border-radius: 4px;
+    text-wrap: nowrap;
+  }
+  .portfolio-section .portfolio-div .filter-list .list-item-button.active-but {
+    background-color: #2196F3;
+    color: #FFFFFF;
+  }
+  .portfolio-section .portfolio-div .project-list {
+    padding-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+  }
+  .portfolio-section .portfolio-div .project-list .project-list__item {
+    max-width: 354px;
+  }
+  .portfolio-section .portfolio-div .project-list .project-list__item:hover {
+    box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06), 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  }
+  .portfolio-section .portfolio-div .project-list .project-list__item:not(:last-child) {
+    margin-bottom: 0;
+  }
+  .portfolio-section .portfolio-div .project-list .box {
+    width: 354px;
+    height: 440px;
+  }
+  .portfolio-section .portfolio-div .project-list .box .taxt {
+    padding: 49px 24px 77px 24px;
+  }
+  .portfolio-section .portfolio-div .project-list .box .div-text {
+    width: 354px;
+    height: 146px;
+    padding: 20px 24px 56px 24px;
+  }
+  .portfolio-section .portfolio-div .project-list .box .div-text .project-item-title {
+    text-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .portfolio-section .portfolio-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .portfolio-section .portfolio-div .project-list {
+    padding-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+  }
+  .portfolio-section .portfolio-div .project-list .project-list__item {
+    max-width: 354px;
+    height: 404px;
+  }
+  .portfolio-section .portfolio-div .project-list .project-list__item:hover {
+    box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06), 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  }
+  .portfolio-section .portfolio-div .project-list .project-list__item:not(:last-child) {
+    margin-bottom: 0;
+  }
+  .portfolio-section .portfolio-div .project-list .box {
+    width: 354px;
+    height: 100%;
+  }
+  .portfolio-section .portfolio-div .project-list .box .taxt {
+    padding: 63px 24px;
+  }
+  .portfolio-section .portfolio-div .project-list .box .div-text {
+    width: 354px;
+    height: 110px;
+    padding: 20px 24px;
+  }
+  .portfolio-section .portfolio-div .project-list .box .div-text .project-item-title {
+    text-wrap: nowrap;
   }
 }/*# sourceMappingURL=main.css.map */
