--- a/sass/components/_containers.scss
+++ b/sass/components/_containers.scss
@@ -1,21 +1,21 @@
-.main-conteiner{
-    width: 1600px;  
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    // outline: 1px red dashed; 
+// .main-conteiner{
+//     width: 1600px;  
+//     margin: 0 auto;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     // outline: 1px red dashed; 
 
-    @media screen and (min-width: 480px) {
-        width: 480px;
-    }
-    @media screen and (min-width: 768px) {
-        width: 768px;
-    }
-    @media screen and (min-width: 1200px) {
-        width: 1600px;
-    }
-}
+//     @media screen and (min-width: 480px) {
+//         width: 480px;
+//     }
+//     @media screen and (min-width: 768px) {
+//         width: 768px;
+//     }
+//     @media screen and (min-width: 1200px) {
+//         width: 1600px;
+//     }
+// }
 .conteiner{
     width: 1200px;
     margin: 0 auto;
