--- a/sass/loyout/_03-pecularities.scss
+++ b/sass/loyout/_03-pecularities.scss
@@ -1,7 +1,13 @@
 .section-peculiarities {
     padding-top: 60px;
     padding-bottom: 60px;
-    min-width: 100vw;
+
+    .peculiarities-div{
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
     
     .title-peculiarities {
         color: getColor(dark);
@@ -14,7 +20,8 @@
     .list-peculiarities {
         
         .list-peculiarities__item {
-            width: 450px;
+            width: 100%;
+            max-width: 450px;
             
             &:not(:last-child){
                 margin-bottom: 30px;
