--- a/sass/loyout/_06-clients.scss
+++ b/sass/loyout/_06-clients.scss
@@ -1,6 +1,12 @@
 .section-clients {
     padding: 60px 0;
-    min-width: 100vw;
+
+    .clients-div{
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
     .title-clients {
       font-weight: 700;
@@ -15,6 +21,7 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       justify-content: center;
+      max-width: 450px;
       gap: 30px;
       list-style: none;
       padding: 0;
@@ -25,16 +32,20 @@
         fill: #2196F3;
       }
     }
-    .link-clients {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      fill: #AFB1B8;
-      border: 1px solid #AFB1B8;
-      border-radius: 4px;
-      width: 210px;
-      height: 92px;
-      transition: border 500ms cubic-bezier(0.4, 0, 0.2, 1) 100ms, fill 500ms cubic-bezier(0.4, 0, 0.2, 1) 100ms;
+    .list-clients__item{
+
+      .link-clients {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        fill: #AFB1B8;
+        border: 1px solid #AFB1B8;
+        border-radius: 4px;
+        width: 44vw; 
+        max-width: 210px;
+        height: 92px;
+        transition: border 500ms cubic-bezier(0.4, 0, 0.2, 1) 100ms, fill 500ms cubic-bezier(0.4, 0, 0.2, 1) 100ms;
+      }
     }
 }
 @media screen and (min-width: getBreakPoint('tablet')){
@@ -45,9 +56,12 @@
           grid-template-columns: repeat(3, 1fr);
           gap: 30px;
         }
-        .link-clients {
-          width: 210px;
-          height: 92px;
+        .list-clients__item{
+          
+          .link-clients {
+            width: 210px;
+            height: 92px;
+          }
         }
     }
 }
@@ -71,9 +85,12 @@
           display: flex;
           align-items: center;
         }
-        .link-clients {
-          width: 170px;
-          height: 92px;
+        .list-clients__item{
+
+          .link-clients {
+            width: 170px;
+            height: 92px;
+          }
         }
     }
 }
