--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,7 @@ main {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   padding: 48px 40px;
   background-color: #FFFFFF;
   z-index: 1;
@@ -170,7 +170,7 @@ main {
   padding: 0;
   margin: 0;
   list-style: none;
-  margin-bottom: 302px;
+  margin-bottom: 40%;
   gap: 32px;
 }
 
@@ -198,7 +198,7 @@ main {
   }
 }
 .list-header-menu {
-  margin-bottom: 64px;
+  margin-bottom: 20%;
 }
 
 .list-header__item-menu:not(:last-child) {
@@ -249,6 +249,28 @@ main {
   color: #2196F3;
 }
 
+@media (max-height: 600px) {
+  .mobile-menu {
+    margin-bottom: 100px;
+  }
+  .link {
+    font-size: 24px !important;
+  }
+  .link-list-item-menu {
+    font-size: 16px !important;
+  }
+}
+@media (min-height: 600px) and (max-height: 650px) {
+  .mobile-menu {
+    margin-bottom: 150px;
+  }
+  .link {
+    font-size: 30px !important;
+  }
+  .link-list-item-menu {
+    font-size: 20px !important;
+  }
+}
 @media screen and (min-width: 768px) {
   .header {
     height: 80px;
