--- a/sass/loyout/_01-header.scss
+++ b/sass/loyout/_01-header.scss
@@ -76,7 +76,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   padding: 48px 40px;
   background-color: getColor('light');
   z-index: 1;
@@ -99,7 +99,7 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  margin-bottom: 302px;
+  margin-bottom: 40%;
   gap: 32px;
 }
 
@@ -126,7 +126,7 @@
     }
 }
 .list-header-menu{
-    margin-bottom: 64px;
+    margin-bottom: 20%;
 }
 .list-header__item-menu:not(:last-child){
     margin-bottom: 32px;
@@ -174,6 +174,28 @@
     color: getColor('main');
 
     
+}
+@media (max-height: 600px) {
+    .mobile-menu{
+        margin-bottom: 100px;
+    }
+    .link{
+        font-size: 24px !important;
+    }
+    .link-list-item-menu{
+        font-size: 16px !important;
+    }
+}
+@media (min-height: 600px) and (max-height: 650px) {
+    .mobile-menu{
+        margin-bottom: 150px;
+    }
+    .link{
+        font-size: 30px !important;
+    }
+    .link-list-item-menu{
+        font-size: 20px !important;
+    }
 }
 @media screen and (min-width: getBreakPoint('tablet')){
     .header{
