--- a/css/main.css
+++ b/css/main.css
@@ -150,7 +150,7 @@ main {
   height: 100vh;
   padding: 48px 40px;
   background-color: #FFFFFF;
-  z-index: 1;
+  z-index: 2;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
 }
@@ -375,6 +375,14 @@ main {
   .list-header-div {
     flex-direction: row;
     gap: 30px;
+  }
+  .link-list-item:hover {
+    color: #2196F3;
+    fill: #2196F3;
+    transition-property: color, fill;
+    transition-duration: 500ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-delay: 100ms;
   }
   .link-list-item-header {
     font-weight: 500;
@@ -623,6 +631,7 @@ main {
     text-transform: uppercase;
     text-align: center;
     color: #FFFFFF;
+    width: 360px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1276,8 +1285,16 @@ main {
   text-align: center;
   border-radius: 4px;
   text-wrap: nowrap;
+  transition-property: background, color;
+  transition-duration: 500ms;
+  transition-timing-function: ease;
+  transition-delay: 100ms;
 }
 .portfolio-section .filter-list .list-item-button.active-but {
+  background-color: #2196F3;
+  color: #FFFFFF;
+}
+.portfolio-section .filter-list .list-item-button:hover {
   background-color: #2196F3;
   color: #FFFFFF;
 }
