--- a/sass/loyout/_01-header.scss
+++ b/sass/loyout/_01-header.scss
@@ -79,7 +79,7 @@
   height: 100vh;
   padding: 48px 40px;
   background-color: getColor('light');
-  z-index: 1;
+  z-index: 2;
 
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
@@ -153,6 +153,7 @@
 .social-menu{
     display: flex;
     align-items: center;
+
     @media (min-width: 320px) {
         flex-wrap: wrap;
     }
@@ -303,6 +304,14 @@
     .list-header-div{
         flex-direction: row;
         gap: 30px;
+    }
+    .link-list-item:hover{
+        color: getColor('main');
+        fill: getColor('main');
+        transition-property: color, fill;
+        transition-duration: 500ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-delay: 100ms;
     }
     .link-list-item-header{
         font-weight: 500;
