--- a/sass/loyout/_02-hero.scss
+++ b/sass/loyout/_02-hero.scss
@@ -50,7 +50,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-//   background-color: rgba(0, 0, 0, 0.2);
   @include backgraund( rgba(0, 0, 0, 0.2));
   z-index: 2;
 
@@ -242,6 +241,7 @@
     text-transform: uppercase;
     text-align: center;
     color: getColor('light');
+    width: 360px;
   }
 }
 @media screen and (min-width: getBreakPoint('desktop')){
