--- a/sass/loyout/_02-hero.scss
+++ b/sass/loyout/_02-hero.scss
@@ -64,11 +64,11 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 450px;
+  width: 80vw;
+  max-width: 450px;
   height: 609px;
   padding: 40px;
-//   background-color: getColor(light);
-@include backgraund(getColor(light));
+  @include backgraund(getColor(light));
   transform: translate(-50%, -50%);
   transition-property: transform, opacity;
   transition-duration: 500ms;
@@ -82,6 +82,11 @@
     text-align: center;
     color: getColor(dark);
     margin-bottom: 12px;
+  }
+  @media (min-width: 320px) and (max-width: 375px) {
+    .title-modal{
+      font-size: 15px !important;
+    }
   }
 
   .label {
@@ -132,7 +137,8 @@
   .textarea {
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    width: 370px;
+    width: 70vw;
+    max-width: 370px;
     height: 120px;
     resize: none;
     padding-top: 12px;
@@ -149,7 +155,8 @@
   .input-text {
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    width: 370px;
+    width: 70vw;
+    max-width: 370px;
     height: 40px;
   }
 
